feat: complete jshell-attach Part 1 — Steps 6, 7, 8
Step 6 — Error handling:
- attach() unwraps InvocationTargetException and routes to specific
  messages for: AttachNotSupportedException (sudo hint), AgentLoadException
  (EnableDynamicAgentLoading hint), nREPL port timeout, Client connect failure
- _lw_logError() helper: stack traces to /tmp/livewire-attach.log only,
  never to the terminal
- JvmScanner: GraalVM native-image detection in probeDetails()
- All 7 spec §2.5 error conditions produce human-readable single-line messages

Step 7 — versions.json + build/release wiring:
- versions.json at repo root: maps attach.jsh version to bundle-url + sha256
  (sha256 placeholder — updated at release time)
- attach/build.clj extended: pom(), source-jar(), javadoc-jar(),
  release-jars() tasks using tools.build
- bb.edn: attach-pom, attach-source-jar, attach-javadoc-jar,
  attach-release-jars tasks
- bb attach-release-jars produces all 4 ✅ artifacts

Step 8 — Docs:
- README.md: "Try it — no install required" section added above Installation
  as the primary hook, with the one-liner jshell command and Java 21+ note
- SKILL.md: "Zero-install attach via jshell" section with command table,
  requirements, LIVEWIRE_BUNDLE_PATH override, and eval() full-API tip

🤖 Generated with [eca](https://eca.dev)

Co-Authored-By: eca-agent <git@eca.dev>